@@ -35,6 +35,7 @@ int cli_set_willingness(struct cli_def* cli, char* command, char* argv[], int ar
 int cli_set_window_size(struct cli_def* cli, char* command, char* argv[], int argc);
 int cli_set_port(struct cli_def* cli, char* command, char* argv[], int argc);
 
+int cli_show_rc_metric(struct cli_def* cli, char* command, char* argv[], int argc);
 int cli_show_rt_interval(struct cli_def* cli, char* command, char* argv[], int argc);
 int cli_show_max_missed_tc(struct cli_def* cli, char* command, char* argv[], int argc);
 int cli_show_max_missed_hello(struct cli_def* cli, char* command, char* argv[], int argc);
